--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
         const user = await response.json();
         console.log(JSON.stringify(user));
 
-        document.getElementById('name').textContent = user.name ? user.name : 'Anmarilis Moldes';
+        document.getElementById('name').textContent = user.name ? user.name : 'Amarilis Moldes';
         document.getElementById('email').textContent = user.email ? user.email : 'amarilis.moldes@example.com';
         document.getElementById('interests').textContent = user.interests ? user.interests : 'coding';
 
